add JWT token generation

--- a/HotelsWebAPI/appsettings.json
+++ b/HotelsWebAPI/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "HotelsDBConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=HotelListDB;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
+  "JWTSettings": {
+    "Issuer": "HotelsAPI",
+    "Audience": "HotelsAPICLient",
+    "DurationInMins": 10,
+    "Key": "SecHotKey13579$$$"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
